--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <div class="container banner">
+        <img src="getbarter-logo.png"/>
         <div class="row">
             <div class="col-sm-6 offset-sm-1">
                 <div class="row top-level">
@@ -31,32 +32,40 @@
                         <input class="custom-field" type="password" placeholder="Password" name="password"><br/>                       
                         <input class="custom-field" type="tel" placeholder="+234 802 123 4567" name="tel"/>
                     </form>
-                    <div class="account">
-                        <div id="btn-pt-1">REGISTER ACCOUNT</div>
-                        <div id="btn-pt-2">🡪</div>
-                    </div>
+                    <a href="">
+                        <div class="account">
+                            <div id="btn-pt-1">REGISTER ACCOUNT</div>
+                            <div id="btn-pt-2">🡪</div>
+                        </div>
+                    </a>
                 </div>
                 <div class="row flexi" id="flexi-2">
                     <form class="col-sm-12">
                         <input class="custom-field" type="email" placeholder="Email address" name="email"><br/>
                         <input class="custom-field" type="password" placeholder="Password" name="password"><br/>                       
                     </form>
-                    <div class="account">
-                        <div id="btn-pt-1">LOG INTO ACCOUNT</div>
-                        <div id="btn-pt-2">🡪</div>
-                    </div>
+                    <a href="">
+                        <div class="account">
+                            <div id="btn-pt-1">LOG INTO ACCOUNT</div>
+                            <div id="btn-pt-2">🡪</div>
+                        </div>
+                    </a>    
                 </div>
             </div>
             <div class="col-sm-5">
                 <div id="second-page-first-line">You can sign in using your accounts on<br>these sites:</div>
-                <div class="social" id="first-social">
-                    <div class="social-child" id="first-social-child">FACEBOOK</div>
-                    <div class="social-child">🡪</div>
-                </div>
-                <div class="social" id="second-social">
-                    <div class="social-child" id="second-social-child">GOOGLE</div>
-                    <div class="social-child">🡪</div>
-                </div>
+                <a href="">
+                    <div class="social" id="first-social">
+                        <div class="social-child" id="first-social-child">FACEBOOK</div>
+                        <div class="social-child">🡪</div>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="social" id="second-social">
+                        <div class="social-child" id="second-social-child">GOOGLE</div>
+                        <div class="social-child">🡪</div>
+                    </div>
+                </a>
             </div>
         </div>
     </div> <!-- container -->
