--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <div class="container banner">
         <img src="getbarter-logo.png"/>
         <div class="row">
-            <div class="col-sm-6 offset-sm-1">
+            <div class="col-md-6 offset-md-1">
                 <div class="row top-level">
-                    <div class="col-6" id="reg">Register</div>
-                    <div class="col-6" id="log">Login</div>
+                    <div class="col-5" id="reg">Register</div>
+                    <div class="col-5 offset-1" id="log">Login</div>
                 </div>
                 <div class="row second-level">
-                    <div class="col-sm-12" id="reg-text">Barter makes online payments safe and easy, with a new 
+                    <div class="col-md-12" id="reg-text">Barter makes online payments safe and easy, with a new 
                         virtual card for each place you pay online.
                     </div>
                 </div>
                 <div class="row flexi" id="flexi-1">
-                    <form class="col-sm-12">
+                    <form class="col-md-12">
                         <input class="custom-field" type="text" placeholder="First Name" name="first-name"><br/>
                         <input class="custom-field" type="text" placeholder="Last Name" name="last-name"><br/>
                         <input class="custom-field" type="email" placeholder="Email address" name="email"><br/>
@@ -40,19 +40,21 @@
                     </a>
                 </div>
                 <div class="row flexi" id="flexi-2">
-                    <form class="col-sm-12">
+                    <form class="col-md-12">
                         <input class="custom-field" type="email" placeholder="Email address" name="email"><br/>
-                        <input class="custom-field" type="password" placeholder="Password" name="password"><br/>                       
+                        <input class="custom-field" type="password" placeholder="Password" name="password"><br/>      
+                        <div class="extra-link">Forgot Password?</div>                 
                     </form>
                     <a href="">
                         <div class="account">
                             <div id="btn-pt-1">LOG INTO ACCOUNT</div>
                             <div id="btn-pt-2">🡪</div>
                         </div>
+                        <div class="extra-link" style="font-size: 16px; margin-top: -40px">Login with Email Address?</div>
                     </a>    
                 </div>
             </div>
-            <div class="col-sm-5">
+            <div class="col-md-5">
                 <div id="second-page-first-line">You can sign in using your accounts on<br>these sites:</div>
                 <a href="">
                     <div class="social" id="first-social">
